# IEC-61162

./: .gitignore  AUTHORS  IEC61162.pc  IEC61162.pc.in  Makefile.am  NEWS  README  README.md  TODO  config.h.in  configure.ac  libtool
TestPrograms/: Makefile.am  runAll
TestPrograms/AIS/: Makefile.am
TestPrograms/AIS/Alarm/: AISAlarm_test.cpp  AISAlarm_test.h  Makefile.am
TestPrograms/AIS/BasicRuntimeFunctions/: BasicFunctions_test.h  Makefile.am
TestPrograms/AIS/FragmentsMgr/: FragmentsMgr_test.h  Makefile.am
TestPrograms/AIS/Message01/: AISMessage1_test.cpp  AISMessage1_test.h  Makefile.am
TestPrograms/AIS/Message02/: AISMessage2_test.cpp  AISMessage2_test.h  Makefile.am
TestPrograms/AIS/Message03/: AISMessage3_test.cpp  AISMessage3_test.h  Makefile.am
TestPrograms/AIS/Message04/: AISMessage4_test.cpp  AISMessage4_test.h  Makefile.am
TestPrograms/AIS/Message05/: AISMessage5_test.cpp  AISMessage5_test.h  Makefile.am
TestPrograms/AIS/Message06/: AISMessage6_test.cpp  AISMessage6_test.h  Makefile.am
TestPrograms/AIS/Message07/: AISMessage7_test.cpp  AISMessage7_test.h  Makefile.am
TestPrograms/AIS/Message08/: AISMessage08_test.cpp  AISMessage08_test.h  Makefile.am
TestPrograms/AIS/Message09/: AISMessage9_test.cpp  AISMessage9_test.h  Makefile.am
TestPrograms/AIS/Message10/: AISMessage10_test.cpp  AISMessage10_test.h  Makefile.am
TestPrograms/AIS/Message11/: AISMessage11_test.cpp  AISMessage11_test.h  Makefile.am
TestPrograms/AIS/Message12/: AISMessage12_test.cpp  AISMessage12_test.h  Makefile.am
TestPrograms/AIS/Message13/: AISMessage13_test.cpp  AISMessage13_test.h  Makefile.am
TestPrograms/AIS/Message14/: AISMessage14_test.cpp  AISMessage14_test.h  Makefile.am
TestPrograms/AIS/Message15/: AISMessage15_test.cpp  AISMessage15_test.h  Makefile.am
TestPrograms/AIS/Message16/: AISMessage16_test.cpp  AISMessage16_test.h  Makefile.am
TestPrograms/AIS/Message17/: AISMessage17_test.cpp  AISMessage17_test.h  Makefile.am
TestPrograms/AIS/Message18/: AISMessage18_test.cpp  AISMessage18_test.h  Makefile.am
TestPrograms/AIS/Message19/: AISMessage19_test.cpp  AISMessage19_test.h  Makefile.am
TestPrograms/AIS/Message20/: AISMessage20_test.cpp  AISMessage20_test.h  Makefile.am
TestPrograms/AIS/Message21/: AISMessage21_test.cpp  AISMessage21_test.h  Makefile.am
TestPrograms/AIS/Message22/: AISMessage22_test.cpp  AISMessage22_test.h  Makefile.am
TestPrograms/AIS/Message23/: AISMessage23_test.cpp  AISMessage23_test.h  Makefile.am
TestPrograms/AIS/Message24/: AISMessage24_test.cpp  AISMessage24_test.h  Makefile.am
TestPrograms/AIS/Message25/: AISMessage25_test.cpp  AISMessage25_test.h  Makefile.am
TestPrograms/AIS/Message26/: AISMessage26_test.cpp  AISMessage26_test.h  Makefile.am
TestPrograms/AIS/Message27/: AISMessage27_test.cpp  AISMessage27_test.h  Makefile.am
TestPrograms/AIVDM/: AIVDM_Test.cpp  AIVDM_Test.h  Makefile.am
TestPrograms/AIVDO/: AIVDO_Test.cpp  AIVDO_Test.h  Makefile.am
TestPrograms/Performance/: AIS_Msg.txt  DelimitedFile.h  InterThreadsMsgQueue.h  Makefile.am  debug.h  globals.h  locks.cpp  locks.h  main.cpp  tools.cpp  tools.h
TestPrograms/Performance/tests/: Makefile.am
TestPrograms/Performance/tests/DelimitedFile/: DelimitedFile_tests.h  Makefile.am  locks.cpp  locks.h  test1.txt  tools.cpp  tools.h
TestPrograms/Performance/tests/InterThreadsMsgQueue/: InterThreadsMsgQueue_tests.cpp  InterThreadsMsgQueue_tests.h  Makefile.am
TestPrograms/proprietarySentence/: IEC61162Msg_Tests.cpp  IEC61162Msg_Tests.h  Makefile.am
exampleProgram/: Configuration.cpp  Configuration.h  CorbaClientAdaptor.h  DelimitedFile.h  FastMutex.h  InterThreadsMsgQueue.h  InternalDatabaseReader.cpp  InternalDatabaseReader.h  InternalDatabaseWriter.cpp  InternalDatabaseWriter.h  Makefile.am  MapServantImpl.cpp  MapServantImpl.h  SourceDevice.h  SourceFile.h  SourceMultiTCP.cpp  SourceMultiTCP.h  SourceSerial.h  SourceTCP.cpp  SourceTCP.h  String.cpp  String.h  Type_of_electronic_position_fixing_device.csv  ais.idl  corbaInterfaces.cpp  corbaInterfaces.h  countries.csv  debug.cpp  debug.h  globals.h  locks.cpp  locks.h  main.cpp  tools.cpp  tools.h
exampleProgram/tests/: DelimitedFile  InterThreadsMsgQueue  Makefile.am
exampleProgram/tests/Configuration/: Configuration_tests.h  Makefile.am
exampleProgram/tests/CorbaClientAdaptor/: CorbaClientAdaptor_tests.h  Makefile.am
exampleProgram/tests/InternalDatabaseWriter/: InternalDatabaseWriter_tests.h  Makefile.am
exampleProgram/tests/SourceMultiTCP/: Makefile.am  SourceMultiTCP_tests.h
exampleProgram/tests/SourceTCP/: Makefile.am  SourceTCP_tests.h
exampleProgram/tests/String/: Makefile.am  String_tests.h
exampleProgram/tests/client/: ais.idl
include/IEC61162/: AISAlarm.h  AISDataTypes.h  AISMessage01.h  AISMessage02.h  AISMessage03.h  AISMessage04.h  AISMessage05.h  AISMessage06.h  AISMessage07.h  AISMessage08.h  AISMessage09.h  AISMessage10.h  AISMessage11.h  AISMessage12.h  AISMessage13.h  AISMessage14.h  AISMessage15.h  AISMessage16.h  AISMessage17.h  AISMessage18.h  AISMessage19.h  AISMessage20.h  AISMessage21.h  AISMessage22.h  AISMessage23.h  AISMessage24.h  AISMessage25.h  AISMessage26.h  AISMessage27.h  IEC-61162.h  basicsmartpointer.h  errors.h
libIEC61162/: AISFragmentsMgr.h  AISMessages.cpp  Makefile.am  ModuleVersionInfo.h  constants.h  debug.cpp  debug.h  globals.h  libIEC61162.cpp  libIEC61162.map
