AUTOMAKE_OPTIONS = gnu
SUBDIRS = BasicRuntimeFunctions FragmentsMgr Message01 Message02 Message03 Message04 Message05 Message06 Message07 Message08 Message09 
SUBDIRS += Message10 Message11 Message12 Message13 Message14 Message15 Message16 Message17 Message18 Message19
SUBDIRS += Message20 Message21 Message22 Message23 Message24 Message25 Message26 Message27
SUBDIRS += Alarm
